--- a/css/student.css
+++ b/css/student.css
@@ -23,8 +23,12 @@
 .search-list__header {
     display: flex;
     align-items: baseline;
-    
 }
+
+h2 {
+    flex-grow: 1;
+}
+
 .search-list__content, .playlist__content {
     display: flex;
     flex-direction: column;
@@ -76,7 +80,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 @media screen and (min-width: 1440px) {
     .bar {
@@ -85,17 +88,20 @@
 }
 
 .bar__player {
-
+    
 }
 
 .player-controls {
     display: flex;
     gap: 1em;
     align-items: center;
+    justify-content: center;
 }
 
 .player-progress {
-
+    display: flex;
+    align-items: center;
+    gap: 1em;
 }
 
 .player-progress__line {
@@ -106,5 +112,6 @@
 }
 
 .bar__controls {
-
+    display: flex;
+    gap: 1em;
 }
